--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "nodejs-mastery",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "native/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon express/app.js"
   },
   "author": "Samir Abakhri",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "express": "^4.21.1"
   }
 }
