--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "mysql2": "^3.11.4",
