--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.15.1",
     "pug": "^3.0.3",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "stripe": "^17.4.0"
   }
 }
