--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pdfkit": "^0.15.1",
     "pug": "^3.0.3",
     "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1",
     "stripe": "^17.4.0"
   }
 }
